--- a/.gitignore
+++ b/.gitignore
@@ -257,6 +257,7 @@ ClientBin/
 *.publishsettings
 orleans.codegen.cs
 RC*
+Thumbs.db
 
 # Including strong name files can present a security risk
 # (https://github.com/github/gitignore/pull/2483#issue-259490424)
